# rust-react-chat

./: .env  .gitignore  Cargo.toml  README.md  chat.db
migrations/2022-11-21-101206_create_users/: up.sql
migrations/2022-11-21-101215_create_rooms/: down.sql  up.sql
migrations/2022-11-21-101223_create_conversations/: down.sql  up.sql
migrations/2022-11-24-034153_generate_dummy_data/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs  session.rs
ui/: package-lock.json  package.json
ui/components/: avatar.js  chat-list-item.js  chat-list.js  conversation-item.js  conversation.js  login.js  rooms.js
ui/libs/: useConversation.js  useLocalStorage.js  useWebsocket.js  websocket.js
ui/pages/: index.js
